# GoIt_Lessons

./: .gitignore
DS/: Homework_3.ipynb  Homework_3_all_inclusive.ipynb  Homework_3_v01.ipynb
Python_core/examples/: format.py
Python_core/module1/: python_corre(10.16).py
Python_core/module10/homework/: run.py
Python_core/module11/autocheck/: examole.py  hello.py
Python_core/module11/homework/: run.py  (+1 more)
Python_core/module2/: 2_15.py  9_15.py
Python_core/module3/: 6_11.py  train.py
Python_core/module4/: 12_14.py  3_14.py  5_14.py  9_14.py
Python_core/module5/: 11_15.py  12_15.py  1_15.py  5_15.py  7_15.py  8_15work.py  9_15.py
Python_core/module6/: 2_14.py  3_14.py  4_14.py  5_14.py
Python_core/module8/: train.py
Python_web/techniques_OOP/: README.md  Untitled Diagram.drawio  homework.txt  save_file.txt
module1/: python_core(3.16).py
module10/homework/: core.py
module11/autocheck/: 2_11.py
module11/homework/: core.py  run.py
module11/magic_methods_train/: example2.py
module12/homework/: core.py  run.py
module12/train/: bad_serealization.py  expenses.py
module2/: 10_15.py  13_15.py  15_15.py  15_15_workversion.py  train.py
module3/: 10_11.py
module4/: 10_14.py  11_14.py  13_14_train_.py  7_14.py  test.py
module5/: 10_15.py  15_15.py  2_15.py  6_15.py  7_15work.py  8_15.py  test.py
module6/: 1_14.py  6_14.py  7_14.py  8_15.py
module6/8_14/: 8_14.py  8_14v2.py
module6/homework/: sorting.py
module6/train/: recipies.txt  test.py  test.txt
module8/homewok/: main.py
module9/homework/: main.py
sorting_sosisok/: pyproject.toml
(+19 files in other folders)
