[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorting_sosisok"
version = "1.0"
authors = [
  { name="Bogdan", email="author@example.com" },
]
description = "sorting files to directories"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Laplas00/sorting_sosisok"

